Pipeline ETL conteneurisée

--- a/JOUR1/TP_JOUR_1/.env
+++ b/JOUR1/TP_JOUR_1/.env
@@ -1,6 +1,10 @@
 API_URL=https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd
 RAW_DATA_PATH=./data/raw/api_data.json
 CLEAN_DATA_PATH=./data/processed/clean_data.csv
-DB_PATH=./data/database.db
+DB_HOST=postgres_db
+DB_PORT=5432
+DB_NAME=etl_database
+DB_USER=etl_user
+DB_PASSWORD=etl_password
 VISUAL_OUTPUT_PATH=./data/outputs/graph.png
 LOG_FILE=./data/etl.log
